<resources>
    <!-- global -->
    <string name="app_name">Daily Meal Recipes</string>
    <string name="app_name_no_spaces">DailyMealRecipes</string>
    <string name="settings_menu_item">Settings</string>
    <string name="exit_menu_item">Exit</string>
    <string name="time_format">%1$s:%2$s %3$s</string>
    <!-- settings -->
    <string name="daily_notification_time">Daily Notification Time</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="recipe_category">Recipe Category</string>
    <string name="num_recent_recipes"># Recent Recipes</string>
    <string name="kosher">kosher</string>
    <string name="quick">quick to make</string>
    <string name="low_calories">low calories</string>
    <string name="recipes_criteria">Recipes Criteria</string>
    <string name="general">General</string>
    <string name="pick_time">Pick Time</string>
    <string name="five">5</string>
    <string name="hint">Select</string>
    <string name="breakfast">Breakfast</string>
    <!-- splash screen -->
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logo_description">Food Recommendation App</string>
    <!-- recipe screen -->
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_recipe">Recipe</string>
    <string name="meal_image">Meal Image</string>
    <string name="recipe_calories">Calories:</string>
    <string name="see_your_captured_image">See your captured image</string>
    <!-- loading layout -->
    <string name="loading">Loading, please wait…</string>
    <!-- prompt values -->
    <string name="promptForGeminiImage">generate a %s recipe for the meal in the image. format your response in a json format, the key names will be "ingredients" for the ingredients, "steps" for the steps to make the meal, "title" for the name of the meal, and "calories" for the estimated calories of the meal. if you cannot see any food or meal in the image, return an empty string.</string>
    <string name="promptForGeminiText">generate a %s recipe for a meal from this request: "%s". format your response in a json format, the key names will be "ingredients" for the ingredients, "steps" for the steps to make the meal, "title" for the name of the meal, and "calories" for the estimated calories of the meal. if you cannot see any food or meal in the image, return an empty string.</string>
    <string name="promptForGeminiNotification">generate a %s recipe for %s, estimate the calories in your recipe. format your response in a json format, the key names will be "ingredients" for the ingredients, "steps" for the steps to make the meal, "title" for the name of the meal, and "calories" for the estimated calories of the meal. if you cannot see any food or meal in the image, return an empty string.</string>
    <!-- error screen -->
    <string name="recipe_error_title">Something went wrong :(</string>
    <string name="error_message_default">Sorry, an unexpected error has occurred.\nPlease try again.</string>
    <string name="error_message_bad_image">Sorry, we were unable to find a recipe for the captured image.\nPlease try again.</string>
    <string name="error_message_no_internet">Sorry, it seems you don\'t have an internet connection.\nPlease restore your connection and try again.</string>
    <string name="error_message_no_recipe">Sorry, we were unable to retrieve the information for this recipe.\nPlease try again.</string>
    <string name="error_message_bad_query">Sorry, we were unable to generate a recipe for the requested meal.\nPlease try again.</string>
    <string name="recipe_error_try_again">Try Again</string>
    <string name="recipe_error_main_screen">Main Menu</string>

    <!-- main activity  -->
    <string name="search_bar_description">I want to eat…</string>
    <string name="camera_button_description">Capture a meal</string>
    <string name="previous_meals">Recent</string>
    <string name="category_meals">Specific Meals</string>
    <string name="capture_meal">Take a picture</string>
    <string name="search_meal">I want to eat…</string>
    <string name="content_description_image">Meal image</string>
    <string name="criteria_empty_text">There are no recipes that fit the criteria (adjustable in settings).</string>
    <string name="recent_empty_text">Your recipe history is empty</string>


</resources>